--- a/package.json
+++ b/package.json
@@ -4,26 +4,22 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint src/"
+    "build": "tsc",
+    "lint": "npx eslint src/",
+    "test": "mocha ./dist/tests/index.js"
   },
   "author": "Stanley",
   "license": "ISC",
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.30",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "browserify": "^17.0.0",
-    "eslint": "^8.13.0",
-    "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
-    "tsify": "^5.0.4",
-    "typescript": "^4.5.5",
-    "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "eslint": "^8.13.0"
   },
   "dependencies": {
     "compare-versions": "^4.1.3",
