--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "author": "Stanley",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.30",
     "@types/chai": "^4.3.1",
+    "@types/lodash": "^4.14.182",
+    "@types/luxon": "^3.0.0",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "chai": "^4.3.6",
-    "mocha": "^10.0.0",
-    "eslint": "^8.13.0"
+    "eslint": "^8.13.0",
+    "mocha": "^10.0.0"
   },
   "dependencies": {
     "compare-versions": "^4.1.3",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.5",
     "ts-md5": "^1.2.11",
