--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zes-unity-jslib",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "compare-versions": "^4.1.3",
+    "inversify": "^6.0.1",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
     "reflect-metadata": "^0.1.13",
